--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,9 +2,10 @@
 base = "light"
 primaryColor = "#3E79B3"
 backgroundColor = "#F6F9FC"
-secondaryBackgroundColor = "#3E79B3"   # sidebar blu
-textColor = "#111111"                  # testo nero (anche negli input)
+secondaryBackgroundColor = "#EEF3FA"   # più chiaro
+textColor = "#111111"
 font = "serif"
 
 [server]
 runOnSave = true
+
